css/wypr.css
/* WYPR styles for header from old site (and to place logos) */

#wypr-header nav#tk {
  background: #009ddc;
  height: 52px;
  margin-bottom: 12px;
}

#wypr-header nav#tk p {
  margin: 0 !important;
  padding: 0 !important;
}

#wypr-header div#btyb {
  width: 985px;
  margin-left: -12.5px;
}

.dark_grey_small, .light_grey_small {
font-size: 10px;
line-height: 12px;
}

.light_grey_small, .light_grey_normal, .light_grey_large {
color: #939598;
}

.dark_grey_small, .dark_grey_normal, .dark_grey_large {
color: #4D4D4F;
}

#wypr-header div.content p {
  color: #4D4D4F;
  display: block;
  font-family: Helvetica, 'Nimbus Sans L', Arial, sans-serif;
  font-size: 14px;
  height: 36px;
  line-height: 18px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
  width: 213px;
}

#wypr-header h2 a#wyprlogo,
#wypr-header h2 a#morninglogo {
  display: block;
  height: 36px;
  overflow: hidden;
  text-indent: -99999px;
}

#wypr-header h2 a#wyprlogo {
  background: url(i/wypr.png) left top no-repeat;
  width: 161px;
}

#wypr-header h2 a#morninglogo {
  background: url(i/mdmng.png) left top no-repeat;
  width: 239px;
}

/* WYPR custom stlyes for TLBU site */

/* GRID INFO */
.column, .columns, .one-half {
  float:left;
  margin: 0 12.5px;   
}

.one.column,
.one.columns     { width:  75px; }
.two.columns     { width: 175px; }
.three.columns   { width: 275px; }
.four.columns,
.one-half        { width: 375px; }
.five.columns    { width: 475px; }
.six.columns     { width: 575px; }
.seven.columns   { width: 675px; }
.eight.columns,
.fullwidth       { width: 775px; }

.clear           { clear: both; display: block; }
.left            { float: left; }
.right           { float: right; }

  
/* COLOR INFO */
/*
Orange: rgba(232,124,66,1)    #E87C42
Brown:  rgba(121,109,105,1)   #796D69
Blue:   rgba(63,184,199,1)    #3FB8C7
Yellow: rgba(252,177,51,1)    #FCB133
*/

/*
==========================================
*/

#site-name,
#site-name a {
  display: block;
  height: 175px;
  width: 775px;
  }

#site-name a {
  background: url(i/tlbu-banner.png) center center no-repeat;
  overflow: hidden;
  text-indent: -999999px;
  }
  

/* Stripes across top of page */
h1#page-title {
}

#navigation {
  background: url(i/tlbustripes.png) left bottom no-repeat;
}

#navigation nav {
  background: url(i/tlbustripes.png) left top no-repeat;
  padding-top: 12.5px;
}

/* Our Stories
==========================================*/
.section-our-stories h1#page-title {
  background-position-x: -1550px;
}

div.view-our-stories div.segment {
  border-bottom: 1px solid #796D69;
  padding: 25px 25px 25px 0;
}

.view-our-stories h2.post-title,
.view-our-stories h2.post-title a {
  color: #E87C42;
  margin: 0;
  text-decoration: none;
  }
  
div.airdate, 
div.airdate strong, 
div.airdate p {
  margin: 0;
}

div.airdate p {
  margin: 0 0 0 12.5px;
  display: inline-block;
}

div.teaser, 
div.teaser p {
  margin: 0;
}

/* bigger lead block for newest segment */
#block-views-our-stories-block-1 .views-row img {
  float: left;
  margin-right: 12.5px;
}

#block-views-our-stories-block-1 .views-row h2.post-title {
  font-size: 150%;
  line-height: 100%;
  margin: 12.5px 0 0 0;
}

#block-views-our-stories-block-1 .views-row div.airdate {
  margin: 0 0 12.5px 0;
}

#block-views-our-stories-block-1 .views-row div.teaser p {
  font-size: 115%;
}


/* Seeing Inequality
==========================================*/
.section-seeing-inequality h1#page-title {
  background-position-x: 0;
}

div.view-seeing-inequality div.embedded {
  border-bottom: 1px solid #796D69;
  padding: 25px 25px 25px 0;
}

.view-seeing-inequality h2.post-title,
.view-seeing-inequality h2.post-title a {
  color: #3FB8C7;
  margin: 0;
  text-decoration: none;
  }
  
/* Your Stories
==========================================*/
.section-your-stories h1#page-title {
  background-position-x: -775px;
}
  

/* Twitter Block Styles
==========================================*/
.view-tweets {
  border: 1px solid #796D69;
  font-size: 13px;
  line-height: 15px;
  margin: 0;
  padding: 0;
}

.view-tweets ul.tweets{
  list-style: none;
  margin: 0;
  padding: 6.25px;
}

.view-tweets ul.tweets li.tweet {
  border-bottom: 1px solid #E9E9E9;
  padding: 6.25px;
}

.view-tweets ul.tweets li.tweet:last-child {
  border-bottom: none;
}

.view-tweets ul.tweets li.tweet p {
  margin: 0;
}

.view-tweets ul.tweets li.tweet p.date {
  font-size: 11px;
  color: #999;
}

/* Frontpage Slideshow 
==========================================*/
#views_slideshow_cycle_main_frontpage_slideshow-page,
#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item > a,
#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item > a img {
  display: block;
  height:250px;
  width: 475px;
}

#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item h3,
#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item p {
  display: block;
  height:250px;
  width: 175px;
}

#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item > a,
#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item > a img {  
  position: relative;
  top: 0;
  left: 0;
  z-index: 7;
}

#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item h3,
#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-cycle-main-frame-row-item p {
  margin: 0;
  padding: 0;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 8;
}

#views_slideshow_cycle_div_frontpage_slideshow-page_0 div.views-slideshow-controls-bottom {
  position: absolute;
  z-index: 10;
}

div.views-slideshow-controls-bottom div.views-slideshow-pager-field-item {
  display: block;
  float:left;
  height: 26px;
  margin: 12.5px 12.5px 0 0;
  padding: 0;
  width: 26px;
}

div.views-slideshow-controls-bottom div.views-slideshow-pager-field-item a {
  background: gray;
  display: block;
  height: 26px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  text-indent: -99999px;
  width: 26px;
  /**/
  border-radius: 13px;
  -moz-border-radius: 13px;
  -webkit-border-radius: 13px;
  -o-border-radius: 13px;
  -ms-border-radius: 13px;
}

div.views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_frontpage_slideshow-page_0 a {
  background: #DF7846;
}

div.views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_frontpage_slideshow-page_1 a {
  background: #3FB8C7;
}

div.views-slideshow-controls-bottom #views_slideshow_pager_field_item_bottom_frontpage_slideshow-page_2 a {
  background: #FCB133;
}

div.views-slideshow-controls-bottom div.views-slideshow-pager-field-item.active a, 
div.views-slideshow-controls-bottom div.views-slideshow-pager-field-item:hover a {
  opacity: .66;
}

div#views_slideshow_cycle_teaser_section_frontpage_slideshow-page {
  z-index: 6;
}

